--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "prefix": "!",
-    "token":"MTA3MDQwMTU3NjU5MTcwODI0Mg.GjNYqs.hjlghHXz4WAM6mDT-Eafhp-Xb-mZj5s-lwXlt4"
+    "token":"MTA3MDQwMTU3NjU5MTcwODI0Mg.G80WEr.O94R5om82uhSeoeR8U-8VfLKyTEFPMvOnCFk54"
 }
