--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/Rael-MiBo/teste#readme",
   "dependencies": {
+    "better-sqlite3": "^8.0.1",
     "discord.js": "^14.7.1",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "quick.db": "^9.0.8"
   }
 }
