--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "dependencies": {
     "better-sqlite3": "^8.0.1",
     "discord.js": "^14.7.1",
+    "discord.js-commando": "^0.12.3",
     "fs": "^0.0.1-security",
-    "quick.db": "^9.0.8"
+    "glob": "^8.1.0",
+    "quick.db": "^9.0.8",
+    "util": "^0.12.5"
   }
 }
