--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Rael-MiBo/teste#readme",
   "dependencies": {
     "better-sqlite3": "^8.0.1",
+    "discord-logs": "^2.2.1",
     "discord.js": "^14.7.1",
     "discord.js-commando": "^0.12.3",
     "fs": "^0.0.1-security",
