--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "discord.js-commando": "^0.12.3",
     "fs": "^0.0.1-security",
     "glob": "^8.1.0",
+    "mongoose": "^6.9.0",
     "quick.db": "^9.0.8",
     "util": "^0.12.5"
   }
