--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "prefix": "!",
-    "token":"MTA3MDQwMTU3NjU5MTcwODI0Mg.G80WEr.O94R5om82uhSeoeR8U-8VfLKyTEFPMvOnCFk54"
+    "token":"MTA3MDQwMTU3NjU5MTcwODI0Mg.GEu8VP.756pRi_42DARqW_r0Zp8-9ycUB3fuTcdWTeQa8"
     }
