--- a/squarecloud.config
+++ b/squarecloud.config
@@ -1,5 +1,5 @@
 DISPLAY_NAME=Andromeda Bot
-DESCRIPTION=Não sei o que colocar, só quero dizer que a Square é top.
+DESCRIPTION=Slk, bglh top ta pae.
 MAIN=index.js
-MEMORY=256
+MEMORY=128
 VERSION=recommended
