--- a/package.json
+++ b/package.json
@@ -1,33 +1,5 @@
 {
-  "name": "teste",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node .",
-    "dev": "nodemon --inspect ."
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Rael-MiBo/teste.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Rael-MiBo/teste/issues"
-  },
-  "homepage": "https://github.com/Rael-MiBo/teste#readme",
   "dependencies": {
-    "better-sqlite3": "^8.0.1",
-    "discord-logs": "^2.2.1",
-    "discord.js": "^14.7.1",
-    "discord.js-commando": "^0.12.3",
-    "fs": "^0.0.1-security",
-    "glob": "^8.1.0",
-    "mongoose": "^6.9.0",
-    "nodemon": "^2.0.22",
-    "quick.db": "^9.0.8",
-    "util": "^0.12.5"
+    "axios": "^1.4.0"
   }
 }
