--- a/.gitignore
+++ b/.gitignore
@@ -126,5 +126,9 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
-
+squarecloud.config
 config.json
+package.json
+package-lock.json
+basedecomandos.js
+LICENSE
